Portfolio page. Some other improvements.

--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -28,7 +28,7 @@
                 </p>
             </div>
             <img class="content-photo content-block"
-                 src="http://static.wixstatic.com/media/11d79d_faa4a14a662f429fa66bb9a7f13ca56e.jpg_srz_p_324_430_75_22_0.50_1.20_0.00_jpg_srz">
+                 src="http://cs5089.vk.me/u121941178/-6/z_0474e100.jpg">
 
             <div class="content-contact content-block content-dark">
                 <p>fusion_design@mail.ru</p>
