--- a/info/static/info/style.css
+++ b/info/static/info/style.css
@@ -2,48 +2,41 @@
 @font-face {
     font-family: "ComfortaaRegular";
     src: url("fonts/ComfortaaRegular/ComfortaaRegular.eot");
-    src: url("fonts/ComfortaaRegular/ComfortaaRegular.eot?#iefix")format("embedded-opentype"),
+    src: url("fonts/ComfortaaRegular/ComfortaaRegular.eot?#iefix") format("embedded-opentype"),
     url("fonts/ComfortaaRegular/ComfortaaRegular.woff") format("woff"),
     url("fonts/ComfortaaRegular/ComfortaaRegular.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
-/* font-family: "ComfortaaLight"; */
-@font-face {
-    font-family: "ComfortaaLight";
-    src: url("fonts/ComfortaaLight/ComfortaaLight.eot");
-    src: url("fonts/ComfortaaLight/ComfortaaLight.eot?#iefix")format("embedded-opentype"),
-    url("fonts/ComfortaaLight/ComfortaaLight.woff") format("woff"),
-    url("fonts/ComfortaaLight/ComfortaaLight.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-/* font-family: "ComfortaaBold"; */
-@font-face {
-    font-family: "ComfortaaBold";
-    src: url("fonts/ComfortaaBold/ComfortaaBold.eot");
-    src: url("fonts/ComfortaaBold/ComfortaaBold.eot?#iefix")format("embedded-opentype"),
-    url("fonts/ComfortaaBold/ComfortaaBold.woff") format("woff"),
-    url("fonts/ComfortaaBold/ComfortaaBold.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-
 
 body {
     margin: 0 auto;
     padding: 0;
-    font-family: "ComfortaaRegular", Times, serif;
+    background-color: #fff;
+    color: #444;
+    font-family: Georgia, Verdana, Helvetica;
+    /*font-feature-settings: "'liga' 1";*/
+    font-kerning: auto;
+    font-style: normal;
+    font-size: 1.0em;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 1.5em;
+    text-align: left;
+    text-decoration: none;
+    text-transform: none;
+    word-spacing: 0;
 }
 
 p {
-    font-family: "ComfortaaRegular", Times, serif;
+    /*font-family: Verdana, Times, serif;*/
 }
 
 h2 {
-    font-family: "ComfortaaBold", Times, serif;
+    /*font-family: Verdana, Times, serif;*/
+    font-weight: normal;
+    font-size: 1.2em;
 }
-
 
 div.header-wrap {
     width: 100%;
@@ -60,10 +53,11 @@ div.menu-wrap {
     margin: 20px auto;
 }
 
-div.menu {
+.menu {
     margin: 0 auto;
     white-space: nowrap;
     height: 60px;
+    font-family: "ComfortaaRegular", Verdana, Helvetica;
 }
 
 img.logo {
@@ -85,12 +79,12 @@ div.menu-item {
     vertical-align: top;
 }
 
-div.menu-item-wrap a:link {
+a:link {
     color: #000000;
     text-decoration: none;
 }
 
-div.menu-item-wrap a:visited {
+a:visited {
     color: #000000;
     text-decoration: none;
 }
@@ -102,17 +96,17 @@ div.menu-item:hover {
 
 div.content-wrap {
     width: 1080px;
-    margin: 20px auto;
+    margin: 30px auto;
 }
 
 div.content {
     margin: 0 auto;
-    white-space: nowrap;
+    white-space: normal;
 }
 
 div.content-left {
     display: inline-block;
-    width: 65%;
+    width: 64%;
     white-space: normal;
     vertical-align: top;
 }
@@ -133,7 +127,7 @@ div.content-quote p {
 
 div.content-right {
     display: inline-block;
-    width: 35%;
+    width: 34%;
     white-space: normal;
     margin-left: 3px;
     vertical-align: top;
@@ -160,7 +154,11 @@ div.content-about p {
     background-color: #444444;
 }
 
-.content-dark p, h2 {
+.content-dark p {
+    color: #ffffff;
+}
+
+.content-dark h2 {
     color: #ffffff;
 }
 
@@ -198,4 +196,56 @@ div.footer {
     margin: 0 auto;
     width: 60%;
     text-align: center;
+}
+
+.portfolio-block {
+    display: inline-block;
+    vertical-align: top;
+    width: 30%;
+    margin: 5px;
+    white-space: normal;
+    background-size: 100%;
+    height: 300px;
+    position: relative;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ffffff;
+}
+
+.portfolio-block p {
+    padding: 5px 10px;
+    margin: 0 auto;
+    font-size: 1.0em;
+}
+
+.portfolio-block h2 {
+    padding: 5px 10px;
+    /*font-weight: normal;*/
+    margin: 0 auto;
+    font-size: 1.3em;
+    /*text-decoration: underline;*/
+}
+
+.portfolio-inner {
+    vertical-align: bottom;
+    position: absolute;
+    bottom: 0;
+    /*background-color: rgba(255, 255, 255, 0.8);*/
+    background-color: rgba(68, 68, 68, 0.8);
+    color: #ffffff;
+    width: 100%;
+    margin: 0 auto;
+    height: 100px;
+}
+
+.portfolio-block:hover {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #F28955;
+    transition: .1s;
+}
+
+.portfolio-block:hover h2 {
+    color: #F28955;
+    transition: .1s;
 }
