--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'info/style.css' %}"/>
 </head>
 <body>
+<div>
 {% include 'info/menu.html' %}
 <div class="content-wrap">
     <div class="content">
@@ -22,7 +23,6 @@
         <div class="content-right">
             <div class="content-about content-block content-dark">
                 <h2>Обо мне</h2>
-
                 <p>
                     Ирина Вайс - дизайнер интерьеров. Куча другого текста.
                 </p>
