--- a/info/templates/info/project_detail.html
+++ b/info/templates/info/project_detail.html
@@ -14,35 +14,52 @@
 
     <!-- Magnific Popup core JS file -->
     <script src="{% static 'info/js/jquery.magnific-popup.js' %}"></script>
+    <script src="{% static 'info/js/portfolio.pack.min.js' %}"></script>
 </head>
 <body>
 {% include 'info/menu.html' %}
 <div class="content-wrap">
     <div class="content">
-        <div>{{ project.title }}</div>
-        <div>{{ project.short_description }}</div>
-        <div>{{ project.description }}</div>
-        <div class="gallery">
-            {% for image in project.gallery.images.all %}
-                {% thumbnail image "500x500" crop="center" as im %}
-                    <a href="{{ image.path.url }}">
-                        <img src="{{ im.url }}">
-                    </a>
-                {% endthumbnail %}
+        <h2>{{ project.title }}</h2>
 
+        <div class="project-gallery">
+            {% for image in project.gallery.images.all %}
+                {% thumbnail image "240x180" crop="center" as im %}
+                    <div class="gallery-item">
+                        <a href="{{ image.path.url }}">
+                            <img src="{{ im.url }}">
+                        </a>
+                    </div>
+                {% endthumbnail %}
             {% endfor %}
         </div>
+        <div class="project-descr">{{ project.description }}</div>
     </div>
 </div>
 {% include 'info/footer.html' %}
 </body>
 </html>
 <script type="application/javascript">
-    $('.gallery').magnificPopup({
+    $('.project-gallery').magnificPopup({
         delegate: 'a',
         type: 'image',
         gallery: {
             enabled: true
         },
     });
+    var p = $(".project-gallery img").portfolio({
+        enableKeyboardNavigation: true, // enable / disable keyboard navigation (default: true)
+        loop: false, // loop on / off (default: false)
+        easingMethod: 'easeOutQuint', // other easing methods please refer: http://gsgd.co.uk/sandbox/jquery/easing/
+        height: '300px', // gallery height
+        width: '100%', // gallery width in pixels or in percentage
+        lightbox: false, // dim off other images, highlights only currently viewing image
+        showArrows: true, // show next / prev buttons
+        logger: false, // for debugging purpose, turns on/off console.log() statements in the script
+        spinnerColor: '#000', // Ajax loader color
+        offsetLeft: -4, // position left value for current image
+        opacityLightbox: '0.2' // opacity of other images which are not active
+
+    });
+    p.init();
 </script>
