--- a/info/templates/info/footer.html
+++ b/info/templates/info/footer.html
@@ -1,6 +1,6 @@
 <div class="footer-wrap">
     <div class="footer">
-        <div class="copyright">(c) 2015 vadya</div>
+        <div class="copyright">(c) 2015 Ирина Вайс</div>
         <div class="contacts_footer">+7 918 303 3000 | fusion_design@mail.ru</div>
     </div>
 </div>
