--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'info/style.css' %}"/>
 </head>
 <body>
-<div>
+<div class="body-wrap">
 {% include 'info/menu.html' %}
 <div class="content-wrap">
     <div class="content">
@@ -29,12 +29,6 @@
             </div>
             <img class="content-photo content-block"
                  src="http://cs5089.vk.me/u121941178/-6/z_0474e100.jpg">
-
-            <div class="content-contact content-block content-dark">
-                <p>fusion_design@mail.ru</p>
-
-                <p>+7 918 303 3000</p>
-            </div>
         </div>
 
     </div>
